# OptiFlow

./: .gitignore  README.md  docker-compose.yml  env_example  start.sh
.claude/: ralph-loop.local.md
Docs/: AI_ML_Technical_Documentation.docx  AI_ML_Technical_Documentation.md  Technical implementation guide.md  Trd.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: communication.py  ethics.py  fairness.py  optimization.py  policy.py  risk.py  stakeholders.py  vehicles.py
backend/app/core/: config.py  socketio.py
backend/app/core/ethics/: __init__.py  monte_carlo.py  simulator.py
backend/app/core/fairness/: auditor.py
backend/app/core/ml/: __init__.py  anomaly_model.py  demand_model.py  eta_model.py  risk_model.py
backend/app/core/optimization/: vrp_solver.py
backend/app/core/risk/: enhanced_scorer.py  scorer.py
backend/app/core/stakeholders/: __init__.py  network.py
backend/app/db/: database.py  init.sql
backend/app/models/: db_models.py  schemas.py
backend/app/services/: gemini_service.py  redis_service.py  streaming_service.py
docs/: index.html
docs/css/: styles.css
docs/js/: main.js  webgl.js
docs/pages/: api-reference.html  architecture.html  bias-audit.html  communication-hub.html  customer-updates.html  ethics-simulator.html  fleet-visualization.html  getting-started.html  policy-advisor.html  risk-assessment.html  route-optimization.html  stakeholder-network.html
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useAnimatedValue.ts  useKonamiCode.ts  useMapInstance.ts  useSocketConnection.ts
frontend/src/lib/: api.ts  fleetRoutes.ts  mapbox.ts  socket.ts  (+1 more)
simulation/: Dockerfile  main.py  pyproject.toml  requirements.txt
simulation/generators/: delivery_generator.py  iot_sensor_generator.py  traffic_generator.py  vehicle_generator.py
(+86 files in other folders)
