[tool.poetry]
name = "logistics-simulation"
version = "1.0.0"
description = "Synthetic data simulation for Logistics AI Platform"
authors = ["Logistics AI Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
